--- a/about.html
+++ b/about.html
@@ -6,15 +6,15 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>My name is <b>Nakalembe Linda Martha</b>. I am 23 years old and from Kyanja, Uganda. 
-       I am currently a Year 2 student pursuing a <b>Bachelor’s in Computer Science</b> 
+    <p>My name is <b>Nakalembe Linda Martha</b>  I am currently a Year 2 student pursuing a <b>Bachelor’s in Computer Science</b> 
        at <b>Ndejje University Kampala Branch</b>. 
        My dream is to grow into a skilled <i>data analyst</i>.</p>
 
     <h2>Academic Background</h2>
     <ul>
-        <li>Year 1: Studied Programming Fundamentals, Computer Architecture, and Ethics</li>
-        <li>Year 2: Focusing on Data Analysis, Information Security, and Web Development</li>
+        <li>2024 - Present: Bachelor’s in Computer Science at Ndejje University</li>
+        <li>2018-2022: St. Mary's Kitende</li>
+		 <li>2013-2017: Ndejje SSS</li>
     </ul>
 	
 	
